# HEEModByPuls

./: CMakeLists.txt  README.md  a.out  cpptest.cpp  firstcommittest.txt  note.txt  workspace.code-workspace
designCode/: activity_diagram_outline.wsd  class_design_outline.wsd  testgraph.wsd
doc/: 1D_EBdrift.md  1D_apploximate.md  1D_guiding_center_equation_standarization.md  1D_spec_parameter_Initialization.md  1DgradBdriftverify.md  2D_guiding_center_equation.md  2Dand1D_guiding_center_equation.md  Apploximate_Field.md  ULFWave_velocity.md  for_linear.md  guiding_center_equation.md  guiding_center_equation_for_toroidalwave_and_dipole.md  kev_calc.md  magnetic_field.md  parameter_standardization.md  parameter_standardization_using_cycrton_frequency.md  parameter_standardization_using_ulf_frequency_for_guiding_center.md
graphScript/: test.py
include/: Account.cpp  Account.hpp  MathCommon.hpp  apply_boundary_condition.hpp  coordinate_spec.hpp  coordinatespec.hpp  heembp_param.hpp  heembpparam.hpp  initialize_field.hpp  initialize_psd.hpp  manage_data_array.hpp  manage_data_in_memory_array.hpp  manage_field_data_on_coordinate.hpp  manage_psd_data_on_coordinate.hpp  (+7 more)
src/: Account.cpp  AccountTest.cpp  CMakeLists.txt  apply_boundary_condition.cpp  coordinate_spec.cpp  heembp_param.cpp  initialize_field.cpp  initialize_psd.cpp  manage_data_array.cpp  manage_data_in_memory_array.cpp  manage_field_data_on_coordinate.cpp  manage_psd_data_on_coordinate.cpp  sample  sample.cpp  store_data_in_memory_array.cpp  vlasov_solver.cpp  vlasov_solver1d.cpp  workspace.code-workspace
(+62 files in other folders)
